# django-custom-user

./: db.sqlite3  manage.py  pyproject.toml
custom/: admin.py  form.py  tests.py  urls.py  views.py
custom/migrations/: 0001_initial.py
django_custom_user/: asgi.py  settings.py  urls.py  wsgi.py
